# AkamiProject

./: CMakeLists.txt  Dockerfile  README.md  Shortner.cpp  Shortner.hpp  TestShortner.cpp  install.sh  main.cpp
