cmake_minimum_required(VERSION 3.20)
project(AkamiProject)

set(CMAKE_CXX_STANDARD 23)
include_directories(include)
add_subdirectory(src)
add_subdirectory(test)
add_executable(AkamiProject src/main.cpp src/Shortner.cpp)
target_link_directories(AkamiProject PRIVATE library)
target_link_libraries(AkamiProject LINK_PRIVATE restbed)
add_executable(AkamiTest test/TestShortner.cpp)
target_link_directories(AkamiTest PRIVATE library)
target_link_libraries(AkamiProject LINK_PRIVATE restbed)
